--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="React Example for Upbit" content="React Example for Upbit" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Upbit API for React" />
+    <meta property="og:description" content="리액트로 Upbit API 사용하기" />
+    <meta
+      property="og:image"
+      content="https://devkangminhyeok.github.io/React-Upbit-API-Example/meta_image.png"
+    />
+
     <title>React Example for Upbit</title>
   </head>
   <body>
