feat : TOTAL EXAMPLE에서 RealTimeTradeHistory prefetching 기능 추가 & Google Analysis 태그 추가
- 웹소켓의 체결내역이 쌓이기 전에 fetching을 통해 30개의 체결내역을 먼저
가져온 후 미리 보여주고 websocket data 가 쌓이면서 fetching data는
사라지게 만들었음
- index.html에 google analysis 태그 추가함

 On branch master
 Changes to be committed:
	modified:   public/index.html
	modified:   src/QuotationAPI/RESTAPI-example/TradeHistoryData.js
	modified:   src/QuotationAPI/TOTAL-example/RealTimeTradeHistory.js

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,23 @@
       property="og:image"
       content="https://devkangminhyeok.github.io/React-Upbit-API-Example/meta_image.png"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-V0QMDRK0QT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
+      gtag("config", "G-V0QMDRK0QT");
+    </script>
     <title>React Example for Upbit</title>
   </head>
+
   <body>
     <div id="root"></div>
   </body>
